# django-zana

./: .gitignore  README.md  conftest.py  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: test.yaml  workflow.yaml
0.0.x/search/: search_index.json
0.1.x/: 404.html  index.html
0.2.x/: 404.html  index.html
0.2.x/search/: search_index.json
0.3.x/: 404.html  index.html
djx/: apps.py
djx/models/: __init__.py  __init__.pyi  aliases.py
djx/types/: enums.py
docs/: index.md
example/: apps.py  local_settings.py  models.py  settings.py
example/aliases/: admin.py  apps.py  models.py
example/aliases/management/commands/: populate_data.py
example/aliases/migrations/: 0001_initial.py  0002_author_created_at_author_updated_at_book_created_at_and_more.py  0002_author_income_author_num_books_author_publishers_and_more.py  0003_book_tag_book_tags.py  0003_novel_author_version_book_version_publisher_version.py  0004_book_chapters_book_date_book_num_pages_book_topics_and_more.py  0005_alter_book_tags.py  0006_book_desc_c_book_desc_r_book_desc_s_alter_book_tag.py  0007_book_is_short.py
example/migrations/: 0001_initial.py
example/xaliases/: models.py
example/xaliases/migrations/: 0001_initial.py  0002_author_created_at_author_updated_at_book_created_at_and_more.py
src/django_zana/: apps.py
src/zana/django/: apps.py
src/zana/django/models/: __init__.py  __init__.pyi  aliases.py
tests/: _test_canvas.py  faker.py  test_canvas.py  test_env.py
tests/app/: fields.py  local_settings.py  models.py  settings.py
tests/app/migrations/: 0001_initial.py
tests/integration/models/: test_aliases.py
tests/models/: test_aliases.py  test_x_aliases.py
tests/models/aliases/: test_by_field_type.py  test_i_alias_field.py  test_u_alias_field.py  test_u_model_alias_fields.py
tests/xaliases/: test_x_aliases.py
zana/django/: _canvas.py  apps.py  canvas.py  operator.py
zana/django/models/: __init__.py  __init__.pyi  _aliases.py  _xaliases.py  aliases.py  fields.py  operator.py  xaliases.py
zana/django/models/fields/: __init__.py  aliases.py
zana/django/utils/: operator.py
