[tool.poetry]
name = "Django-Zana"
version = "0.0.1"
description = "Django Tool Kit "
packages = [
    { include="zana", from = "src" },
    { include="django_zana", from = "src" },
]
authors = ["David Kyalo <davidmkyalo@gmail.com>"]
license = "MIT"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = ">=3.9"
Django = ">=3.2.0"
typing-extensions = ">=4.4.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
pytest-cov = {version = "^4.0.0", extras = ["toml"]}


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mike = "*"
mkdocstrings = {version = "*", extras = ["python"]}

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = "True"


[tool.pytest.ini_options]
addopts = "--showlocals --cov=zana --cov-report html --cov-config pyproject.toml"
asyncio_mode="auto"
xfail_strict= "True"
log_level = "DEBUG"
python_files = "tests.py test.py test_*.py"
python_classes = "test_* Test_*"
python_functions = "test_*"



[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "^\\s*pass\\s*$",
    "^\\s*\\.\\.\\.\\s*$",
    "raise NotImplementedError",
    "if\\s+([a-zA-Z0-9_]+\\.)?TYPE_CHECKING",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

